# Netfilm

./: .gitignore  Add.cpp  Add.h  App.cpp  App.h  CMakeLists.txt  Dockerfile  Help.cpp  Help.h  ICommand.h  IMenu.cpp  Icommand.cpp  MapCommands.cpp  MapCommands.h  Menu.cpp  Movie.cpp  README.md  Recommend.cpp  Recommend.h  User.cpp  docker-compose.yml  funcForTests.cpp  funcForTests.h  main.cpp  package-lock.json  package.json  tests_Add.cpp  tests_AllTests.cpp  tests_App.cpp  tests_Help.cpp  tests_Recommend.cpp
Wiki/: README.md  Running Examples - Android  Running Examples - Android.md  Running Examples - Web.md  Running the Application.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
api/: Dockerfile.api  api_requests.rest  app.js  package-lock.json  package.json
api/controllers/: category.js  movie.js  recommend.js  tokens.js  user.js
api/models/: category.js  movie.js  user.js
api/routes/: category.js  movie.js  recommend.js  tokens.js  user.js
api/services/: category.js  movie.js  recommend.js  tokens.js  user.js
api/validation/: category.js  movie.js  user.js
data/: users.txt
docs/: README.md
server/: docker-compose.yml  package-lock.json  package.json
server/api/: api_requests.rest  app.js  launch.json  package-lock.json  package.json
server/api/controllers/: category.js  movie.js  recommend.js  tokens.js  user.js
server/api/middleware/: fileDelete.js  fileUpload.js
server/api/models/: category.js  movie.js  user.js
server/api/routes/: movie.js  upload.js  user.js
server/api/services/: movie.js  recommend.js  tokens.js  user.js
server/api/validation/: category.js  movie.js  user.js
server/docs/: README.md
server/src/client/: Client.py
src/: Add.cpp  Add.h  AnExecutor.cpp  AnExecutor.h  App.cpp  App.h  CMakeLists.txt  Client.h  Client.py  ClientHandle.cpp  ClientHandle.h  DeleteCommand.cpp  DeleteCommand.h  Dockerfile  Dockerfile.client  Dockerfile.server  Executor.h  Get.cpp  Get.h  Help.cpp  ICommand.h  LockerThread.cpp  LockerThread.h  MapCommands.cpp  MapCommands.h  Patch.cpp  Patch.h  Post.cpp  Post.h  Recommend.cpp  Recommend.h  Runnable.h  Server.cpp  Server.h  a  dataFuncs.cpp  dataFuncs.h  docker-compose.yml  funcForTests.cpp  funcForTests.h  (+11 more)
src/commands/: Add.cpp  DeleteCommand.cpp  Patch.cpp  Recommend.cpp
src/interfaces/: ILocker.h  Runnable.h
src/system/: AnExecutor.cpp  AnExecutor.h  ClientHandle.h  Server.cpp  Server.h  ThreadPool.cpp  ThreadPool.h
src/threads/: LockerThread.cpp  ThreadPool.cpp
src/utils/: dataFuncs.h
tests/: CMakeLists.txt  Help.h  ICommand.h  Recommend.h  tests_Add.cpp  tests_App.cpp  tests_Help.cpp  tests_Menu.cpp  tests_Recommed.cpp
tests/data/: 18_watchlist.txt
tests/h/: tests_Add.h  tests_App.h  tests_Help.h  tests_Recommend.h
web/: Dockerfile.web  package-lock.json  package.json
web/public/: HomeLoggedOut.html  index.html  login.html  register.html
web/src/: App.js  GlobalContext.js  LocationContext.js  ThemeContext.js  TokenGuard.js  index.css  index.js
(+195 files in other folders)
